<resources>
    <string name="app_name">TOMO Wallet - Demo Testnet</string>
    <string name="blank">This is blank!</string>
    <string name="next">Next</string>
    <string name="construct_1">TOMO wallet will create your unique Mnemonic pharse containing 12 unique words. This pharse is use to recover your wallet, so please keep it safely.</string>
    <string name="your_mnemonic">Your Mnemonic</string>
    <string name="your_address">Your wallet address</string>
    <string name="your_private_key">Your private key</string>
    <string name="done">done</string>
    <string name="creating_your_wallet">Creating your wallet...</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="dacoloixayra">There was an Error!</string>
    <string name="create_wallet">Create new wallet</string>
    <string name="your_wallet">Your wallet</string>
    <string name="mine_tmc">Mine TMC</string>
    <string name="you_have_total">You have total:</string>
    <string name="tmc">TMC</string>
    <string name="mining">mining</string>
    <string name="ok">Ok</string>
    <string name="view_your_address">Show wallet address</string>
    <string name="view_your_mnemonic">Show backup phrase</string>
    <string name="delete_your_wallet">Remove your wallet</string>
    <string name="wallet_deleted">Wallet deleted!</string>
    <string name="be_careful">Be careful!</string>
    <string name="delete_wallet_mess">You are about to remove your wallet, and your wallet can only be restored by the Backup . Do you want to continue?</string>
    <string name="delete">Delete</string>
    <string name="tmc_in_tomo_chain">TMC in Tomochain</string>
    <string name="more_info">more info</string>
    <string name="cash_out">cash out</string>
    <string name="cash_in">cash in</string>
    <string name="tmc_in_eth_chain">TMC in Ethereum</string>
    <string name="cash_out_amount">Enter your amount you want to cash out to ETH. The coin must between [0] and [1].</string>
    <string name="cash_out_value">cash out value...</string>
    <string name="cash_in_amount">Enter your amount you want to cash in to TOMOChain. The coin must between [0] and [1].</string>
    <string name="cash_in_value">cash in value...</string>
    <string name="invalid_value">Invalid value!</string>
    <string name="total">Total</string>
    <string name="reward_engine_smart_contract">Reward Engine Smart Contract:</string>
    <string name="instruct_1">Do not send ethers nor tokens to any of the addresses above. They are for test only and we are not likely to have control of them in mainnet.</string>
    <string name="tomo_coin_smart_contract">Tomocoin Smart Contract:</string>
    <string name="cash_out_smart_contract">CashOut Smart Contract:</string>
    <string name="cash_in_smart_contract">CashIn Smart Contract:</string>
    <string name="send_tmc">Send TMC</string>
    <string name="receive_tmc">Receive TMC</string>
    <string name="your_address_click_to_copy">Your address (click to copy)</string>
    <string name="recevie_address">Receiver address</string>
    <string name="amount_to_transfer">Amount of TMC to transfer</string>
    <string name="transfer">Transfer</string>
    <string name="app_can_run_without_cam_permission">Application need camera permission to continue!</string>
    <string name="amount_between">The transfer amount must greater than zero and must not exceed [1] TMC!</string>
    <string name="hint_abc">eg: 3.15</string>
    <string name="invalid_address">Invalid address!</string>
    <string name="confirm_send">Confirm send TMC</string>
    <string name="confirm_send_content">Please confirm that you are about to transfer [1] TMC to address [2]. This action can not be undo!</string>
    <string name="cancel">Cancel</string>
    <string name="transferring">transferring</string>
    <string name="welcome_to_tomo_wallet">Welcome to TomoWallet</string>
    <string name="test_net_mode">Testnet mode</string>
    <string name="mes_01">Tomowallet works on two blockchain. The first one is Tomochain (zero fee and Instant confirmation). The second one is Ethereum Rinkeby.</string>
    <string name="mes_02">This demo will show you how to earn Tomocoins (TMC) from RewardEngine, how to transfer TMC from Tomochain to Ethereum (CashOut) and how to transfer TMC from Ethereum from Tomochain.</string>
    <string name="mes_03">Create a new wallet and let\'s experience!</string>
    <string name="already_have_wallet"><u>Import or recover your wallet</u></string>
    <string name="create_pin_code">Create PIN code</string>
    <string name="mes_04">Create your 4-Digits PIN Code. Everytime you open app, you must enter your PIN.</string>
    <string name="pin_un_match">Your confirmation PIN code is incorrect!</string>
    <string name="mes_05">Please re-enter your PIN code</string>
    <string name="mes_06">Unlock your wallet</string>
    <string name="mes_07">Incorrect password!</string>
    <string name="exit">Exit</string>
    <string name="message">Message</string>
    <string name="transaction_time">Transaction time</string>
    <string name="transaction_in_tmc">Transaction in Tomochain</string>
    <string name="transaction_in_eth">Transaction in Ethereum</string>
    <string name="tmc_in_tomo_chain_eth">TMC in Tomo/ETH chain</string>
    <string name="mes_08">Please provide your password.</string>
    <string name="mnemonic_error_1">Mnemonic is a sequence of 12 words!</string>
    <string name="recover_your_wallet">Recover your wallet</string>
    <string name="recovering_your_wallet">Recovering your wallet...</string>
    <string name="enter_your_12_words">Enter your 12 words passpharse</string>
    <string name="invalid_mnemonic">Your mnemonic is invalid! Please check and try again!</string>
    <string name="or">or</string>
    <string name="term_of_service">term of services</string>
    <string name="i_agree_go_next">I agree, go next</string>
    <string name="instruct_0">Create new TOMO wallet</string>
    <string name="mes_00">Please read this construction carefully. This version of application is the demo only. Please do not transfer your Ethereum to this address!</string>
    <string name="mes_09">Set a password to control the access to your wallet</string>
    <string name="enter_password">Enter password</string>
    <string name="mes_10">Password must contain at least [num] characters!</string>
    <string name="mes_11">Password must contain at most of [num] characters!</string>
    <string name="mes_12">Password confirmation is incorrect!</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="mes_13">Your wallet is successfully created!</string>
    <string name="mes_14">We recommend you to backup your wallet so you can easily recover all of information when this device is lost or damaged</string>
    <string name="mes_15">Use your password to unlock your wallet.</string>
    <string name="backup_your_wallet">Backup your wallet</string>
    <string name="confirm">Confirm</string>
    <string name="later">Later</string>
    <string name="backup_now">backup now</string>
    <string name="mes_17">The Backup pharse protects your wallet and can be use to restore your information.</string>
    <string name="mes_18">To make the backup, you need to write down to paper the Backup Pharse (contains 12 words), and keep it carefully. The order is important.</string>
    <string name="mes_19">REMEMBER: Anyone with the copy of Backup Pharse can control your wallet. Please keep it safe!</string>
    <string name="mes_20">Your 12 words Backup Pharse:</string>
    <string name="mes_21">Get your first Tomocoin</string>
    <string name="mes_22">Hello friends, click MINE TOMOCOIN to receive your first Tomocoin from Tomo Reward Engine.</string>
    <string name="all_done">all done!</string>
    <string name="mes_23">Your wallet is successfully restored. Now you can use your wallet with your given password.</string>
    <string name="use_wallet">Use wallet</string>
    <string name="instruct_24">Recover Tomo wallet</string>
    <string name="mes_24">Use your backup backup pharse to get access to your wallet.</string>
    <string name="mes_25">Now you need to type the 12 words of your backup pharse.</string>
    <string name="restore_now">Restore now</string>
    <string name="mes_26">Type all 12 words of your Backup pharse</string>
    <string name="wallet_found">Wallet found</string>
    <string name="mes_27">We found the wallet with address [add] according to your backup phrase. To use this wallet, you need to setup new password.</string>
    <string name="setup_new_password">Setup new password</string>
    <string name="your_backup_phrase">Your backup phrase</string>
    <string name="copied">Copied!</string>
</resources>
