<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_blue"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:elevation="3.5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/instruct_0"
            android:textColor="@color/color_1"
            android:textAllCaps="true"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottom_container">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mes_00"
                android:textColor="@color/color_3"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/txt_label_0"
                android:linksClickable="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mes_01"
                android:textColor="@color/color_blue"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:id="@+id/txt_label_1"
                android:linksClickable="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mes_02"
                android:textColor="@color/color_blue"
                android:textSize="18sp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mes_03"
                android:textColor="@color/color_blue"
                android:textSize="18sp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/color_blue"
        android:id="@+id/bottom_container"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/i_agree_go_next"
            android:textColor="@color/color_1"
            android:textSize="18sp"
            android:background="@drawable/ripple_effect"
            android:id="@+id/btn_next"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>