<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_blue"
        android:id="@+id/toolbar"
        android:elevation="3.5dp"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/ripple_effect"
                android:id="@+id/btn_back"
                android:src="@drawable/ic_arrow_back"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/backup_your_wallet"
                android:textColor="@color/color_1"
                android:textAllCaps="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:id="@+id/backup_container"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/mes_20"
            android:textSize="16sp"
            android:layout_marginTop="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:text="@string/mes_17"
            android:textSize="18sp"
            android:id="@+id/txt_mnemonic"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginTop="24dp"
            android:id="@+id/btn_done"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:id="@+id/content_container"
        android:visibility="gone"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/mes_17"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/mes_18"
            android:textSize="16sp"
            android:layout_marginTop="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/mes_19"
            android:textColor="@color/color_50"
            android:textSize="16sp"
            android:layout_marginTop="24dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_now"
            android:layout_marginTop="24dp"
            android:id="@+id/btn_backup_wallet"/>

    </LinearLayout>
</LinearLayout>