<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_blue"
        android:orientation="horizontal"
        android:id="@+id/container_header">
        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/ic_keyboard_arrow_left"
            android:padding="10dp"
            android:background="@drawable/ripple_effect"
            android:id="@+id/btn_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tmc_in_tomo_chain"
            android:textColor="@color/color_1"
            android:paddingLeft="16dp"
            android:textSize="16sp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/scroll_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reward_engine_smart_contract"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textStyle="normal"
                android:textSize="16sp"
                android:id="@+id/txt_1"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomo_coin_smart_contract"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textStyle="normal"
                android:textSize="16sp"
                android:id="@+id/txt_2"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_out_smart_contract"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textStyle="normal"
                android:textSize="16sp"
                android:id="@+id/txt_3"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_in_smart_contract"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textStyle="normal"
                android:textSize="16sp"
                android:id="@+id/txt_4"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruct_1"
                android:textSize="16sp"
                android:textColor="@color/color_50"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>