<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/blank"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:id="@+id/txt_label"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c4c4c4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="13sp"
            android:text="@string/message"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:textColor="@color/color_3"
            android:text="@string/message"
            android:id="@+id/txt_message"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="13sp"
            android:text="@string/transaction_time"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:textColor="@color/color_3_3"
            android:text="@string/message"
            android:id="@+id/txt_transaction_time"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="13sp"
            android:text="@string/transaction_in_tmc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:text="@string/message"
            android:id="@+id/txt_transaction_in_tomochain"
            android:textColor="@color/color_blue"
            android:maxLines="2"
            android:ellipsize="end"
            android:background="@drawable/ripple_effect"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center"
        android:id="@+id/container_transaction_in_eth">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="13sp"
            android:text="@string/transaction_in_eth"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:text="@string/message"
            android:textColor="@color/color_blue"
            android:id="@+id/txt_transaction_in_ethereum"
            android:maxLines="2"
            android:ellipsize="end"
            android:background="@drawable/ripple_effect"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="13sp"
            android:text="@string/tmc_in_tomo_chain"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/color_3"
            android:text="@string/message"
            android:background="@drawable/ripple_effect"
            android:id="@+id/txt_tmc_in_tomo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="13sp"
            android:text="@string/tmc_in_eth_chain"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/color_50"
            android:text="@string/message"
            android:id="@+id/txt_tmc_in_eth"
            android:background="@drawable/ripple_effect"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="13sp"
            android:text="@string/total"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:text="@string/message"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/color_blue"
            android:id="@+id/txt_total_tmc"/>
    </LinearLayout>
</LinearLayout>